Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: "subnet-01bb1d60b4f9dedf8,subnet-01ed9f4a914f518d2,subnet-010f9e8d0701e63df"
spec:
  ingressClassName: alb
  rules:
    - host: amanpathakdevops.study
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
